--- a/public/css/register.css
+++ b/public/css/register.css
@@ -11,6 +11,7 @@
   background: #FFFFFF;
   /*max-width: 360px;*/
   margin: 0 auto 50px;
+  margin-top: 42px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -92,7 +93,7 @@ body {
   background: #76b852; /* fallback for old browsers */
 
   /*background color*/
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+  background: -webkit-linear-gradient(right, #68a049, #6bb142);
   
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
   background: -o-linear-gradient(right, #76b852, #8DC26F);
